--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,6 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".NuevaCitaActivity"></activity>
+        <activity android:name=".CitaActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".VerifyEmail"
             android:label="@string/app_name"
@@ -21,15 +27,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".VerificarPassword"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
-
+        <activity
+            android:name=".VerificarPassword"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
