--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.android.material:material:1.0.0-beta01'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation 'com.google.android.material:material:1.1.0-alpha09'
 
     def room_version = "2.2.5"
 
