--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,34 +9,28 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/icon_logos"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/icon_logos"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".UsersDetail"></activity>
         <activity android:name=".AddUser" />
         <activity android:name=".VerUsuarios" />
-        <activity android:name=".NuevaCitaActivity" />
+        <activity android:name=".NuevaCitaActivity"
+            android:theme="@style/AppTheme"/>
         <activity
             android:name=".CitaActivity"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".VerifyEmail"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".VerificarPassword"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
